# uno-game

./: Cargo.toml  README.md
assets/i18n/: de-DE.ftl  en-US.ftl
crates/game-client/: Cargo.toml
crates/game-client/src/: main.rs  settings.rs  states.rs  ui.rs
crates/game-client/src/game/: board.rs  hand.rs  hud.rs  mod.rs  pause.rs
crates/game-client/src/i18n/: mod.rs
crates/game-client/src/menu/: lobby.rs  main_menu.rs  mod.rs  settings.rs
crates/game-client/src/network/: mod.rs  socket.rs
crates/game-core/: Cargo.toml
crates/game-core/src/: action.rs  card.rs  error.rs  event.rs  lib.rs  player.rs  state.rs
crates/game-protocol/: Cargo.toml
crates/game-protocol/src/: client.rs  lib.rs  lobby.rs  server.rs  view.rs
crates/game-server/: Cargo.toml
crates/game-server/src/: lobby.rs  main.rs  network.rs  server_state.rs  session.rs  systems.rs
