[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
game-core     = { path = "../game-core", features = ["serde"] }
game-protocol = { path = "../game-protocol" }

tokio         = { version = "1", features = ["full"] }
axum          = { version = "0.7", features = ["ws"] }
futures-util  = "0.3"
serde_json    = "1"
uuid          = { version = "1", features = ["v4"] }
rand          = "0.8"
